--- a/index.html
+++ b/index.html
@@ -2,56 +2,55 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="styles.css?v=1.0">
+  <link rel="stylesheet" href="styles.css?v=1.1">
 </head>
 <body>
   <div class="menu">
     <div class = "head-menu">
-      <button onclick="menuToggle('sub-1')">ต้อนรับ</button>
-      <button onclick="menuToggle('sub-2')">บริการ</button>
-      <button onclick="menuToggle('sub-3')">โปรโมชั่น</button>
-      <button onclick="menuToggle('sub-4')">ขอบคุณ</button>
+      <button onclick="menuToggle('sub-1')" class="menuButton" id="sub-1-button">ต้อนรับ</button>
+      <button onclick="menuToggle('sub-2')" class="menuButton" id="sub-2-button">บริการ</button>
+      <button onclick="menuToggle('sub-3')" class="menuButton" id="sub-3-button">โปรโมชั่น</button>
+      <button onclick="menuToggle('sub-4')" class="menuButton" id="sub-4-button">ขอบคุณ</button>
+    </div>
+    <div id="copy">
+      <button type="button" id="copyButton" onclick="copyText()">คัดลอกข้อความ</button>
     </div>
     <div class="sub-menu" id="sub-1">
-      <select id="sub-1-option">
+      <select id="sub-1-option" onchange="showContent(this.value)">
+        <option value="contact">--เลือก--</option>
         <option value="contact">ช่องทางการติดต่อ</option>
         <option value="test">ทดสอบ</option>
         <option value="test">ทดสอบ</option>
         <option value="test">ทดสอบ</option>
       </select>
-      <button type="button" onclick = "showContent('sub-1-option')">ดูข้อมูล</button>
-      <button type="button" onclick="copyText()">คัดลอกข้อความ</button>
     </div>
     <div class="sub-menu" id="sub-2">
-      <select id="sub-2-option">
+      <select id="sub-2-option" onchange="showContent(this.value)">
+        <option value="contact">--เลือก--</option>
         <option value="services1">บริการ</option>
         <option value="test">ทดสอบ</option>
         <option value="test">ทดสอบ</option>
         <option value="test">ทดสอบ</option>
       </select>
-      <button type="button" onclick="showContent('sub-2-option')">ดูข้อมูล</button>
-      <button type="button" onclick="copyText()">คัดลอกข้อความ</button>
     </div>
     <div class="sub-menu" id="sub-3">
-      <select id="sub-3-option">
+      <select id="sub-3-option" onchange="showContent(this.value)">
+        <option value="contact">--เลือก--</option>
         <option value="promotion1">ฝาก $50 รับเครดิตโบนัส $100</option>
         <option value="promotion2">เครดิตโบนัส 50%</option>
         <option value="test">ทดสอบ</option>
         <option value="test">ทดสอบ</option>
       </select>
-      <button type="button" onclick="showContent('sub-3-option')">ดูข้อมูล</button>
-      <button type="button" onclick="copyText()">คัดลอกข้อความ</button>
     </div>
     <div class="sub-menu" id="sub-4">
-      <select id="sub-4-option">
+      <select id="sub-4-option" onchange="showContent(this.value)">
+        <option value="contact">--เลือก--</option>
         <option value="thank1">ขอบคุณ</option>
         <option value="test">ทดสอบ</option>
         <option value="test">ทดสอบ</option>
         <option value="test">ทดสอบ</option>
       </select>
-      <button type="button" onclick="showContent('sub-4-option')">ดูข้อมูล</button>
-      <button type="button" onclick="copyText()">คัดลอกข้อความ</button>
-    </div>    
+    </div>
   </div>
   <!--<div>
     <button type="button" onclick="copyText()">คัดลอกข้อความ</button>
