--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0;">
-  <link rel="stylesheet" href="styles.css?v=1.4">
+  <link rel="stylesheet" href="styles.css?v=1.5">
 </head>
 <body>
   <div class="menu">
@@ -12,8 +12,7 @@
       <button onclick="menuToggle('sub-2')" class="menuButton" id="sub-2-button">บริการ</button>
       <button onclick="menuToggle('sub-3')" class="menuButton" id="sub-3-button">โปรโมชั่น</button>
       <button onclick="menuToggle('sub-4')" class="menuButton" id="sub-4-button">ขอบคุณ</button>
-      <button onclick="menuToggle('sub-5')" class="menuButton" id="sub-5-button">อื่น ๆ1</button>
-      <button onclick="menuToggle('sub-6')" class="menuButton" id="sub-6-button">อื่น ๆ2</button>
+      <button onclick="menuToggle('sub-5')" class="menuButton" id="sub-5-button">อื่น ๆ</button>
     </div>
     <div id="copy">
       <button type="button" id="copyButton" onclick="copyText()">คัดลอกข้อความ</button>
@@ -57,16 +56,7 @@
     <div class="sub-menu" id="sub-5">
       <select id="sub-5-option" onchange="showContent(this.value)">
         <option value="contact">--เลือก--</option>
-        <option value="thank1">อื่นๆ 1</option>
-        <option value="test">ทดสอบ</option>
-        <option value="test">ทดสอบ</option>
-        <option value="test">ทดสอบ</option>
-      </select>
-    </div>
-    <div class="sub-menu" id="sub-6">
-      <select id="sub-5-option" onchange="showContent(this.value)">
-        <option value="contact">--เลือก--</option>
-        <option value="thank1">อื่น ๆ2</option>
+        <option value="thank1">อื่น ๆ</option>
         <option value="test">ทดสอบ</option>
         <option value="test">ทดสอบ</option>
         <option value="test">ทดสอบ</option>
