--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="sub-menu" id="sub-2">
       <select id="sub-2-option" onchange="showContent(this.value)">
         <option value="contact">--เลือก--</option>
-        <option value="services1">บริการ</option>
+        <option value="service1">ห้องซิกแนล</option>
         <option value="test">ทดสอบ</option>
         <option value="test">ทดสอบ</option>
         <option value="test">ทดสอบ</option>
