--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <button onclick="menuToggle('sub-1')" class="menuButton" id="sub-1-button">ต้อนรับ</button>
       <button onclick="menuToggle('sub-2')" class="menuButton" id="sub-2-button">บริการ</button>
       <button onclick="menuToggle('sub-3')" class="menuButton" id="sub-3-button">โปรโมชั่น</button>
-      <button onclick="menuToggle('sub-4')" class="menuButton" id="sub-4-button">ขอบคุณ</button>
+      <button onclick="menuToggle('sub-4')" class="menuButton" id="sub-4-button">กิจกรรม</button>
       <button onclick="menuToggle('sub-5')" class="menuButton" id="sub-5-button">อื่น ๆ</button>
     </div>
     <div id="copy">
@@ -47,7 +47,7 @@
     <div class="sub-menu" id="sub-4">
       <select id="sub-4-option" onchange="showContent(this.value)">
         <option value="contact">--เลือก--</option>
-        <option value="thank1">ขอบคุณ</option>
+        <option value="activity1">เมษา มหาสนุก</option>
         <option value="test">ทดสอบ</option>
         <option value="test">ทดสอบ</option>
         <option value="test">ทดสอบ</option>
