--- a/index.html
+++ b/index.html
@@ -19,34 +19,35 @@
     </div>
     <div class="sub-menu" id="sub-1">
       <select id="sub-1-option" onchange="showContent(this.value)">
-        <option value="contact">--เลือก--</option>
-        <option value="contact">ช่องทางการติดต่อ</option>
-        <option value="test">ทดสอบ</option>
-        <option value="test">ทดสอบ</option>
-        <option value="test">ทดสอบ</option>
+        <option value="welcome1">--เลือก--</option>
+        <option value="welcome1">ช่องทางการติดต่อ</option>
+        <option value="welcome2">เปิดบัญชี</option>
+        <option value="welcome3">ยืนยันตัวตน</option>
+        <option value="welcome4">เอกสารยืนยันตัวตน</option>
+        <option value="welcome5">ประเภทบัญชี</option>
       </select>
     </div>
     <div class="sub-menu" id="sub-2">
       <select id="sub-2-option" onchange="showContent(this.value)">
-        <option value="contact">--เลือก--</option>
+        <option value="welcome1">--เลือก--</option>
         <option value="service1">ห้องซิกแนล</option>
-        <option value="test">ทดสอบ</option>
+        <option value="service2">ea</option>
         <option value="test">ทดสอบ</option>
         <option value="test">ทดสอบ</option>
       </select>
     </div>
     <div class="sub-menu" id="sub-3">
       <select id="sub-3-option" onchange="showContent(this.value)">
-        <option value="contact">--เลือก--</option>
+        <option value="welcome1">--เลือก--</option>
         <option value="promotion1">ฝาก $50 รับเครดิตโบนัส $100</option>
         <option value="promotion2">เครดิตโบนัส 50%</option>
-        <option value="test">ทดสอบ</option>
-        <option value="test">ทดสอบ</option>
+        <option value="promotion3">ชวนเพื่อน $1,000</option>
+        <option value="promotion4">ชวนเพื่อน 10%</option>
       </select>
     </div>
     <div class="sub-menu" id="sub-4">
       <select id="sub-4-option" onchange="showContent(this.value)">
-        <option value="contact">--เลือก--</option>
+        <option value="welcome1">--เลือก--</option>
         <option value="activity1">เมษา มหาสนุก</option>
         <option value="test">ทดสอบ</option>
         <option value="test">ทดสอบ</option>
@@ -55,7 +56,7 @@
     </div>
     <div class="sub-menu" id="sub-5">
       <select id="sub-5-option" onchange="showContent(this.value)">
-        <option value="contact">--เลือก--</option>
+        <option value="welcome1">--เลือก--</option>
         <option value="thank1">อื่น ๆ</option>
         <option value="test">ทดสอบ</option>
         <option value="test">ทดสอบ</option>
