--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
       <select id="sub-1-option" onchange="showContent(this.value)">
         <option value="welcome1">--เลือก--</option>
         <option value="welcome1">ช่องทางการติดต่อ</option>
-        <option value="welcome2">เปิดบัญชี</option>
-        <option value="welcome3">ยืนยันตัวตน</option>
-        <option value="welcome4">เอกสารยืนยันตัวตน</option>
-        <option value="welcome5">ประเภทบัญชี</option>
+        <option value="welcome2">ขอข้อมูลลูกค้า</option>
+        <option value="welcome3">เปิดบัญชี</option>
+        <option value="welcome4">ยืนยันตัวตน</option>
+        <option value="welcome5">เอกสารยืนยันตัวตน</option>
+        <option value="welcome6">ประเภทบัญชี</option>
       </select>
     </div>
     <div class="sub-menu" id="sub-2">
@@ -32,35 +33,36 @@
         <option value="welcome1">--เลือก--</option>
         <option value="service1">ห้องซิกแนล</option>
         <option value="service2">ea</option>
-        <option value="test">ทดสอบ</option>
-        <option value="test">ทดสอบ</option>
+        <option value="test"></option>
+        <option value="test"></option>
       </select>
     </div>
     <div class="sub-menu" id="sub-3">
       <select id="sub-3-option" onchange="showContent(this.value)">
         <option value="welcome1">--เลือก--</option>
-        <option value="promotion1">ฝาก $50 รับเครดิตโบนัส $100</option>
-        <option value="promotion2">เครดิตโบนัส 50%</option>
-        <option value="promotion3">ชวนเพื่อน $1,000</option>
-        <option value="promotion4">ชวนเพื่อน 10%</option>
+        <option value="promotion1">โปรโมชั่นทั้งหมด</option>
+        <option value="promotion2">ฝาก $50 รับเครดิตโบนัส $100</option>
+        <option value="promotion3">เครดิตโบนัส 50%</option>
+        <option value="promotion4">ชวนเพื่อน $1,000</option>
+        <option value="promotion5">ชวนเพื่อน 10%</option>
       </select>
     </div>
     <div class="sub-menu" id="sub-4">
       <select id="sub-4-option" onchange="showContent(this.value)">
         <option value="welcome1">--เลือก--</option>
         <option value="activity1">เมษา มหาสนุก</option>
-        <option value="test">ทดสอบ</option>
-        <option value="test">ทดสอบ</option>
-        <option value="test">ทดสอบ</option>
+        <option value="test"></option>
+        <option value="test"></option>
+        <option value="test"></option>
       </select>
     </div>
     <div class="sub-menu" id="sub-5">
       <select id="sub-5-option" onchange="showContent(this.value)">
         <option value="welcome1">--เลือก--</option>
         <option value="thank1">อื่น ๆ</option>
-        <option value="test">ทดสอบ</option>
-        <option value="test">ทดสอบ</option>
-        <option value="test">ทดสอบ</option>
+        <option value="test"></option>
+        <option value="test"></option>
+        <option value="test"></option>
       </select>
     </div>
   </div>
@@ -70,8 +72,8 @@
     <span id="copyed"></span>
   </div>-->
   <div class = "content">
-    <textarea id="textarea" rows="4" cols="50">ช่องทางการติดต่อ</textarea>
-    <div id="text">ช่องทางการติดต่อ</div>
+    <textarea id="textarea" rows="4" cols="50">ช่องทาง facebook https://www.facebook.com/maxtrarich ช่องทาง LINE https://lin.ee/3XCC1nT</textarea>
+    <div id="text">ช่องทาง facebook https://www.facebook.com/maxtrarich ช่องทาง LINE https://lin.ee/3XCC1nT</div>
     <div>
       <img src="images/contact.jpg" id="image">
     </div>
