--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link rel="icon" href="images/logo.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0;">
   <link rel="stylesheet" href="styles.css?v=1.7">
 </head>
