--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
       <img src="images/contact.jpg" id="image">
     </div>
   </div>
-  <script src="scripts.js"></script>
+  <script src="scripts.js?v=1.0"></script>
 </body>
 </html>
