--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
     <div class="sub-menu" id="sub-2">
       <select id="sub-2-option" onchange="showContent(this.value)">
         <option value="welcome1">--เลือก--</option>
-        <option value="service1">ห้องซิกแนล</option>
-        <option value="service2">ea</option>
+        <option value="service1">บริการที่มี</option>
+        <option value="service2">ห้องซิกแนล</option>
+        <option value="service3">ea</option>
         <option value="test"></option>
         <option value="test"></option>
       </select>
@@ -79,6 +80,6 @@
       <img src="images/contact.jpg" id="image">
     </div>
   </div>
-  <script src="scripts.js?v=1.0"></script>
+  <script src="scripts.js?v=1.1"></script>
 </body>
 </html>
