--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="sub-menu" id="sub-3">
       <select id="sub-3-option" onchange="showContent(this.value)">
         <option value="welcome1">--เลือก--</option>
-        <option value="promotion1">โปรโมชั่นทั้งหมด</option>
+        <option value="promotion1">โปรโมชั่นที่มี</option>
         <option value="promotion2">ฝาก $50 รับเครดิตโบนัส $100</option>
         <option value="promotion3">เครดิตโบนัส 50%</option>
         <option value="promotion4">ชวนเพื่อน $1,000</option>
@@ -80,6 +80,6 @@
       <img src="images/contact.jpg" id="image">
     </div>
   </div>
-  <script src="scripts.js?v=1.2"></script>
+  <script src="scripts.js?v=1.3"></script>
 </body>
 </html>
