--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <option value="welcome1">--เลือก--</option>
         <option value="service1">บริการที่มี</option>
         <option value="service2">ห้องซิกแนล</option>
-        <option value="service3">ea</option>
-        <option value="test"></option>
+        <option value="service3">EA</option>
+        <option value="service4">IB</option>
         <option value="test"></option>
       </select>
     </div>
