--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="sub-menu" id="sub-5">
       <select id="sub-5-option" onchange="showContent(this.value)">
         <option value="welcome1">--เลือก--</option>
-        <option value="thank1">อื่น ๆ</option>
+        <option value="other1">Hedging</option>
         <option value="test"></option>
         <option value="test"></option>
         <option value="test"></option>
