--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <select id="sub-5-option" onchange="showContent(this.value)">
         <option value="welcome1">--เลือก--</option>
         <option value="other1">Hedging</option>
-        <option value="test"></option>
+        <option value="other2">Spread</option>
         <option value="test"></option>
         <option value="test"></option>
       </select>
