--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
   <div class = "content">
     <textarea id="textarea" rows="4" cols="50">ช่องทาง facebook https://www.facebook.com/maxtrarich ช่องทาง LINE https://lin.ee/3XCC1nT</textarea>
     <div id="text">ช่องทาง facebook https://www.facebook.com/maxtrarich ช่องทาง LINE https://lin.ee/3XCC1nT</div>
-    <div>
-      <img src="images/contact.jpg" id="image">
+    <div id="image">
+      <img src="images/contact.jpg">
     </div>
   </div>
   <script src="scripts.js?v=1.5"></script>
