--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="sub-menu" id="sub-4">
       <select id="sub-4-option" onchange="showContent(this.value)">
         <option value="welcome1">--เลือก--</option>
-        <option value="activity1">เมษา มหาสนุก</option>
+        <option value="activity1">เมษา พาสนุก</option>
         <option value="test"></option>
         <option value="test"></option>
         <option value="test"></option>
