--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <option value="promotion3">เครดิตโบนัส 50%</option>
         <option value="promotion4">ชวนเพื่อน $1,000</option>
         <option value="promotion5">ชวนเพื่อน 10%</option>
+        <option value="promotion6">โปร 4.4</option>
       </select>
     </div>
     <div class="sub-menu" id="sub-4">
@@ -79,7 +80,7 @@
     <div id="text"></div>
     <div id="image"></div>
   </div>
-  <script src="scripts.js?v=1.6"></script>
+  <script src="scripts.js?v=1.7"></script>
   <script>
     (function() {
       showContent("welcome1");
