--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <option value="welcome1">--เลือก--</option>
         <option value="other1">ชีทกลาง</option>
         <option value="other2">Hedging</option>
-        <option value="other3">Spread</option>
+        <option value="other3">ภาพต่าง ๆ</option>
         <option value="test"></option>
         <option value="test"></option>
       </select>
