--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <option value="other1">ชีทกลาง</option>
         <option value="other2">Hedging</option>
         <option value="other3">ภาพต่าง ๆ</option>
-        <option value="test"></option>
+        <option value="other4">เบอร์โทร</option>
         <option value="test"></option>
       </select>
     </div>
@@ -80,7 +80,7 @@
     <div id="text"></div>
     <div id="image"></div>
   </div>
-  <script src="scripts.js?v=1.7"></script>
+  <script src="scripts.js?v=1.8"></script>
   <script>
     (function() {
       showContent("welcome1");
